--- a/metadata.yaml
+++ b/metadata.yaml
@@ -17,6 +17,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'BS'
 - !lcsh 'Bible. Thessalonians, 1st'
+- GITenberg
 title: 'The Bible, Douay-Rheims, Book 59: 1 Thessalonians
 
   The Challoner Revision'
